--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="imgs/zen.ico" type="image/x-icon">
   <link rel="stylesheet" href="./master.css">
   <title>Lucy Sabin | Project</title>
 </head>
