italicise tools used

--- a/makatalk.html
+++ b/makatalk.html
@@ -30,7 +30,7 @@
     <img src="./imgs/makatalk-options.png" alt="" class="project-img">
     <p>It was an interesting challenge to figure out how the user would select their answer. Our solution is to autoplay a Youtube playlist when the page loads, highlighting the options (image thumbnails) as each is enacted in Makaton. The options are at the bottom of the screen, so that the main video isn't covered up while they tap away on the tablet.</p>
     <p>Alpha testing in a therapy setting has shown that our users prefer responding to a video interface. But they would like to see "more exciting animations".</p>
-    <p>I used: pencil and paper, HTML5, CSS, JavaScript.</p>
+    <p><em>I used: pencil and paper, HTML5, CSS, JavaScript.</em></p>
   </article>
   <footer>
     <ul>
