--- a/nourish.html
+++ b/nourish.html
@@ -23,13 +23,13 @@
     <p>Persons who receive therapy for food-related mental health disorders are generally required to track their mood and eating habits. The A4 paper forms that are currently used for this are indiscreet and impractical for people on the go. Imagine having to fill out the form below Every Single Time you eat or drink something!</p>
     <img src="./imgs/eating-cbt-form.jpg" alt="" class="project-img">
     <p><a href="https://yvonne-liu.github.io/annafreud-app/landing.html" target="_blank">Nourish</a> is a prototype, built and designed by myself and two others during a five-day hackathon supported by the Anna Freud National Centre for Children and Families. It aims to replace paper "food diaries".</p>
-    <img src="./imgs/nourish-logameal.png" alt="" class="project-img">
+    <img src="./imgs/nourish-logameal.png" alt="" class="project-img nourish-mobile">
     <p>We used interactive elements to speed up the user's experience of logging a meal: the time of entry is autocompleted, they have the option to take a photo of their meal in place of writing a description, and there are sliding scales for evaluating their mood. <a href="https://yvonne-liu.github.io/annafreud-app/logameal.html" target="_blank">Try it yourself</a>, if you like.</p>
     <p>We also added a calendar interface, from which the user can access past diary entries, to show recovery progress over time. This was received well by clinicans and test users who trialled the product remotely, although the calendar needs some work to make it more intuitive to use.
     </p>
-    <img src="./imgs/nourish-calendar.png" alt="" class="project-img">
+    <img src="./imgs/nourish-calendar.png" alt="" class="project-img nourish-mobile">
     <p>All importantly, there is the convenient option to send patient data to the therapist, so users are free to be paper-less.</p>
-    <img src="./imgs/nourish-modal.png" alt="" class="project-img">
+    <img src="./imgs/nourish-modal.png" alt="" class="project-img nourish-mobile">
     <p>The aesthetic is calming and airy, influenced by the paintings of Nicholas Roreich (see below). We wanted to differentiate Nourish from other dietary apps, so that there is no hint of bodily objectification.</p>
     <img src="./imgs/roreich.jpg" alt="" class="project-img">
     <p><em>I used: pencil and paper, Photoshop, Illustrator, HTML5, CSS, JavaScript.</em></p>
