--- a/about.html
+++ b/about.html
@@ -38,26 +38,25 @@
       </ul>
       <img src="./imgs/alice-quote.png" alt="" class="about-drawing">
       <h2>So what's my story?</h2>
-      <p>Creativity and curiosity defined my formative years, and underpin who I am today.</br></br>My 16-year-old self dreamed of becoming a Textile Artist; I was determined to fill my life with colour and texture. </br></br>By 18, however, my focus had shifted to Modern Languages and Philosophy. A big part of me was drawn
-        to exploring other cultures and questioning fundamental truths about human nature. So I applied to read Liberal Arts at Durham.  </br>
-        </br>
-        I taught myself how to code in my student bedroom, using online resources. Programming just seemed like a new syntax and vocabulary, alongside French and Spanish, except I could build things with it. I was excited by this newfound outlet for my creative
-        side. </br>
-        </br>Whilst on a year abroad, I studied Fine Art in Spain. Specifically, this entailed: painting and colour theory, drawing and composition, sculpting and installation art. It was then that I began to realise what I truly wanted to do: make beautiful
-        things that solve real human needs. </br>
-        </br>My final year dissertation was as contemporary as possible; it applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In a nutshell, I argued that the human body plays an interactive role in film
-        viewing, because the emotions and sense memories that arise in the spectator are bodily phenomena. In many ways, the filmmaker is like an interaction designer, attempting to involve the audience and craft a moving experience. </br>
-        </br>On graduating Durham, I became PR and Social Media Manager of startup, SheCanCode. This was thanks to a popular blog I'd started about learning to code, as well as my prolific portfolio of freelance writing as Art and Travel Editor of the University
-        magazine. Managing Comms for SheCanCode proved to be a varied role that provided me with unique insights into the technology industry. It inspired me to deepen my programming knowledge. Thus, I applied for the competitive Founders & Coders JavaScript
-        bootcamp. </br>
-        </br>During my 16 weeks at Founders and Coders, we worked in small teams on week-long sprints. I relished the challenge of coding. But my heart wasn't 100% invested. I felt much more passionate about making sure that the final product would fulfil
-        the needs and wants of our users (even if they were hypothetical at first). People saw value in what I was doing. So I began to consciously develop my natural tendencies towards a UX point of view, so that I could be more useful to the network
-        of developers around me, principally as a designer, who can also write logically-sound code, and prototype like a worker bee. </br>
-        </br>I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. Product Owners who consider themselves "non-technical" feel that they can trust me as well,
-        because I have their best interests at heart.  </br>
-        </br>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical aspects of my personality. I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays
-        is to develop empathy... isn't that a wonderful thing? </br>
-      </br>My master plan is to continue accumulating skills and wisdom as an Interaction Designer.</p>
+      <p>When I was younger, I dreamed of becoming a Textile Artist, so that I could live a life full of colour and texture.</p>
+
+<p>Lured by the deep thinking of academia, however, I went on to study Modern Languages and Philosophy at Durham. A big part of me is drawn to exploring other cultures and questioning assumptions about human nature, an outlook which informs my approach to design.</p>
+
+<p>My creative and analytical tendencies coalesced when I started teaching myself how to code, using online resources in my student bedroom. Then spending my third year enrolled on a Fine Art course in Spain helped me to reconnect with the artist mindset.</p>
+
+<p>I loved analysing moving image culture at university, with a final year dissertation that applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In many ways, the filmmaker is like an interaction designer, looking to involve the audience and craft an emotional, sensual experience.</p>
+
+<p>On graduating Durham, I became PR and Social Media Manager of startup, SheCanCode. This was thanks to a popular blog I'd started about learning to code, as well as my prolific portfolio of freelance writing as Art and Travel Editor of the University magazine.</p>
+
+<p>Managing Comms for SheCanCode proved to be a varied role that provided me with unique insights into the technology industry. It inspired me to deepen my programming knowledge. Thus, I applied for the competitive Founders & Coders JavaScript bootcamp.</p> 
+
+<p>Founders and Coders gave me my first taste of agile, lean development. We would work in small teams, and I tended to fill the UX role. People saw the value in what I was doing. So I up skilled as a UX designer and have made myself an attribute to the network of developers around me.</p> 
+
+<p>I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. Product Owners who consider themselves “not particularly technical" feel that they can trust me as well, because I have their best interests at heart.</p>
+
+<p>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical aspects of my personality. I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy... isn't that a wonderful thing?</p>
+
+<p>My master plan is to continue accumulating skills and wisdom as an Interaction Designer.</p>
       </br>
       <h2>More potentially useful info:</h2>
       <ul class="links-list">
