--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       </ul>
       <img src="./imgs/alice-quote.png" alt="" class="about-drawing">
       <h2>So what's my story?</h2>
-      <p>When I was younger, I dreamed of becoming a Textile Artist, so that I could live a life full of colour and texture.</p>
+      <p>I have always been particularly intrigued by colour, texture, and form. When I was younger, I dreamed of becoming a Textile Artist.</p>
 
 <p>Lured by the deep thinking of academia, however, I went on to study Modern Languages and Philosophy at Durham. A big part of me is drawn to exploring other cultures and questioning assumptions about human nature, an outlook which informs my approach to design.</p>
 
