--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       <h2>So what's my story?</h2>
       <p>I have always been particularly intrigued by colour, texture, and form. When I was younger, I dreamed of becoming a Textile Artist.</p>
 
-<p>Lured by the deep thinking of academia, however, I went on to study Modern Languages and Philosophy at Durham. A big part of me is drawn to exploring other cultures and questioning assumptions about human nature, an outlook which informs my approach to design.</p>
+<p>Lured by the deep thinking of academia, however, I went on to study Modern Languages and Philosophy at Durham. A big part of me is drawn to exploring other cultures and questioning assumptions about human nature.</p>
 
 <p>My creative and analytical tendencies coalesced when I started teaching myself how to code, using online resources in my student bedroom. Then spending my third year enrolled on a Fine Art course in Spain helped me to reconnect with the artist mindset.</p>
 
@@ -50,7 +50,9 @@
 
 <p>Managing Comms for SheCanCode proved to be a varied role that provided me with unique insights into the technology industry. It inspired me to deepen my programming knowledge. Thus, I applied for the competitive Founders & Coders JavaScript bootcamp.</p> 
 
-<p>Founders and Coders gave me my first taste of agile, lean development. We would work in small teams, and I tended to fill the UX role. People saw the value in what I was doing. So I up skilled as a UX designer and have made myself an attribute to the network of developers around me.</p> 
+<p>Founders and Coders gave me my first taste of agile, lean development. We would work in small teams, and I tended to fill the UX role. People saw the value in what I was doing. So I up-skilled as a UX designer and have made myself an attribute to the network of developers around me.</p> 
+    <p>I now get to work on a range of projects, from educational and mental health products to industrial and commercial platforms. I am always learning from the people I work with.</p>
+   
 
 <p>I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. Product Owners who consider themselves “not particularly technical" feel that they can trust me as well, because I have their best interests at heart.</p>
 
