change bio copy

--- a/about.html
+++ b/about.html
@@ -38,27 +38,16 @@
       </ul>
       <img src="./imgs/alice-quote.png" alt="" class="about-drawing">
       <h2>So what's my story?</h2>
-      <p>I have always been particularly intrigued by colour, texture, and form. When I was younger, I dreamed of becoming a Textile Artist.</p>
-
-<p>Lured by the deep thinking of academia, however, I went on to study Modern Languages and Philosophy at Durham. A big part of me is drawn to exploring other cultures and questioning assumptions about human nature.</p>
-
-<p>My creative and analytical tendencies coalesced when I started teaching myself how to code, using online resources in my student bedroom. Then spending my third year enrolled on a Fine Art course in Spain helped me to reconnect with the artist mindset.</p>
-
-<p>I loved analysing moving image culture at university, with a final year dissertation that applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In many ways, the filmmaker is like an interaction designer, looking to involve the audience and craft an emotional, sensual experience.</p>
-
-<p>On graduating Durham, I became PR and Social Media Manager of startup, SheCanCode. This was thanks to a popular blog I'd started about learning to code, as well as my prolific portfolio of freelance writing as Art and Travel Editor of the University magazine.</p>
-
-<p>Managing Comms for SheCanCode proved to be a varied role that provided me with unique insights into the technology industry. It inspired me to deepen my programming knowledge. Thus, I applied for the competitive Founders & Coders JavaScript bootcamp.</p> 
-
-<p>Founders and Coders gave me my first taste of agile, lean development. We would work in small teams, and I tended to fill the UX role. People saw the value in what I was doing. So I up-skilled as a UX designer and have made myself an attribute to the network of developers around me.</p> 
-    <p>I now get to work on a range of projects, from educational and mental health products to industrial and commercial platforms. I am always learning from the people I work with.</p>
-   
-
-<p>I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. Product Owners who consider themselves “not particularly technical" feel that they can trust me as well, because I have their best interests at heart.</p>
-
-<p>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical aspects of my personality. I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy... isn't that a wonderful thing?</p>
-
-<p>My master plan is to continue accumulating skills and wisdom as an Interaction Designer.</p>
+      <p>I have always been particularly intrigued by colour, texture, and form. Indeed, when I was younger, I dreamed of becoming a Textile Artist.</p>
+      <p>Lured by the deep thinking of academia, however, I went on to study Modern Languages and Philosophy at Durham.</p>
+      <p>I started teaching myself to code in my student bedroom. I also reconnected with the art world by spending my third year abroad, studying Bellas Artes at the Universidad de Vigo in Spain.</p>
+      <p>Moving image culture became a real passion at university; my final year dissertation applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In many ways, the filmmaker is like an interaction designer, who looks to involve the audience in a journey, by crafting an emotional, sensual experience.</p>
+      <p>Anyways, I guess you could say that a big part of me is drawn to exploring other cultures and questioning assumptions about human nature; this outlook continues to inform my freelance writing portfolio and open-minded approach as a designer.</p>
+      <p>Since graduating Durham, I have worked in digital media, honing my coding, communication, and design skills.</p>
+      <p>As a UX Designer at Founders and Coders, I work with small teams to develop digital products using an agile/lean methodology. We work with everyone from education and mental health charities to industrial and e-commerce platforms.
+      <p>I also consult with startups on their digital strategy.</p>
+      <p>I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. Whereas product owners who consider themselves “not particularly technical" feel that they can trust me to do a great job, because I have their best interests at heart.</p>
+      <p>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical sides of my personality. I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p>
       </br>
       <h2>More potentially useful info:</h2>
       <ul class="links-list">
