--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       <img src="./imgs/alice-quote.png" alt="" class="about-drawing">
       <h2>So what's my story?</h2>
       <p>I have always been particularly intrigued by colour, texture, and form. Indeed, when I was younger, I dreamed of becoming a Textile Artist.</p>
-      <p>Lured by the deep thinking of academia, however, I went on to study Modern Languages and Philosophy at Durham.</p>
+      <p>Lured by the intellectual challenges of the Humanities, however, I went on to study Modern Languages and Philosophy at Durham.</p>
       <p>I started teaching myself to code in my student bedroom. I also reconnected with the art world by spending my third year abroad, studying Bellas Artes at the Universidad de Vigo in Spain.</p>
       <p>Moving image culture became a real passion at university; my final year dissertation applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In many ways, the filmmaker is like an interaction designer, who looks to involve the audience in a journey, by crafting an emotional, sensual experience.</p>
       <p>Anyways, I guess you could say that a big part of me is drawn to exploring other cultures and questioning assumptions about human nature; this outlook continues to inform my freelance writing portfolio and open-minded approach as a designer.</p>
