add coot freight

--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
   <article class="about-wrapper">
     <section class="about-main-text">
       <img src="./imgs/profile-drawing.png" alt="" class="about-drawing">
-      <p class="heading">Hi there! I'm Lucy. A designer and maker driven to create meaningful products, using tech to inspire joy. I offer consultancy, design, and full stack development. I also know about copywriting and brand.</p>
+      <p class="heading">Hi there! I'm Lucy. A designer and maker driven to create meaningful products, using tech to inspire joy. I offer consultancy, design, and full stack development. I also know about copywriting and brand. </p>
+      <p class="heading">When I'm not working on freelance design projects or teaching yoga, you can find me guest lecturing at UCA in Front End Development and Interaction Design.</p>
       <h2>My approach to designing and making is:</h2>
       <ul class="my-approach-list">
         <li>User-centred.</li>
