--- a/arabin.html
+++ b/arabin.html
@@ -25,8 +25,10 @@
     <p>Arab Innovators aims to increase the visibility of Arab entrepreneurs in the eyes of investors, with an Events and News page that champion success stories.</p>
     <p>The aim is to create a sense of community, while showcasing talented role models. In further iterations I would like to supplement this with a newsfeed on the landing page and more of a social media presence.</p>
     <p>At the moment, the team and product owner are still adding to their initial database of startups and collecting feedback from investors.</p>
-    <p><em>I used: pencil and paper, Sketch App, InVision</em></p>
+    <img src="./imgs/arabin-naz.png" alt="" class="project-img">
+    <p>As you can see, I was initially inspired by photographs of Nazareth at night, showcasing a town with a dense Arab/Palestinian population as an almost magical place full of opportunity.</p>
     <img src="./imgs/arabin-mobile.png" alt="" class="project-img">
+    <p><em>I used: pencil and paper, Sketch App, InVision</em></p>
   </article>
   <footer>
     <ul>
