--- a/index.html
+++ b/index.html
@@ -25,25 +25,34 @@
     <div class="container-fade">
       <img src="./imgs/makatalk-cover.png" alt="" class="portfolio-piece">
       <div class="overlay">
-        <div class="text">MakaTalk</div>
+        <div class="text">MakaTalk (iPad app)</div>
       </div>
     </div>
   </a>
 
-    <a href="./nourish.html">
-      <div class="container-fade">
-        <img src="./imgs/nourish-cover.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">Nourish</div>
-        </div>
+  <a href="./coot-freight.html">
+    <div class="container-fade">
+      <img src="./imgs/coot-cover.png" alt="" class="portfolio-piece">
+      <div class="overlay">
+        <div class="text">Coot Freight (responsive re-design)</div>
       </div>
-    </a>
+    </div>
+  </a>
 
     <a href="./arabin.html">
       <div class="container-fade">
         <img src="./imgs/arabin-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Arab Innovators</div>
+          <div class="text">Arab Innovators (responsive website)</div>
+        </div>
+      </div>
+    </a>
+
+    <a href="./nourish.html">
+      <div class="container-fade">
+        <img src="./imgs/nourish-cover.png" alt="" class="portfolio-piece">
+        <div class="overlay">
+          <div class="text">Nourish (mobile app)</div>
         </div>
       </div>
     </a>
@@ -52,7 +61,7 @@
     <div class="container-fade">
       <img src="./imgs/yoga-cover.png" alt="" class="portfolio-piece">
       <div class="overlay">
-        <div class="text">Yoga Website</div>
+        <div class="text">LucyRoseYoga (responsive website)</div>
       </div>
     </div>
   </a>
