--- a/yoga.html
+++ b/yoga.html
@@ -19,13 +19,13 @@
     </ul>
   </nav>
   <article class="project-wrapper">
-    <h1>Designing A One Page Website For A Small Business.</h1>
-    <p>I am often asked to create simple websites for people who are self-employed. The crucial thing with these projects is to convey a sense of personality, as well as clarity about what the small business is offering.</p>
-    <p>For my yoga website, I gained a lot of useful feedback over social media. I'm pretty happy with <a href="www.lucyroseyoga.com" target="_blank">the finished result.</a></p>
-    <p><em>I used: pencil and paper, Photoshop, HTML5, CSS, JavaScript, Formspree.</em></p>
+    <h1>A Stylish One-Page Website.</h1>
+    <p>Simple business websites need to convey a sense of personality, as well as clarity about what the company or individual does.</p>
+    <p>For my personal yoga website, I gained a lot of useful feedback over social media. I'm pretty happy with <a href="www.lucyroseyoga.com" target="_blank">the finished result.</a></p>
     <img src="./imgs/rainbowlogotextlarge.jpg" alt="" class="project-img">
-    <p>The above was one of my shortlist logo designs for my business, Lucy Rose Yoga. I created it following a trip to India, and was keen to incorporate all of the colours of the energy body. However, people I spoke to in the UK felt that the geometrical form and colour scheme appeared mystic or esoteric. This concerned me, because my aim as a Yoga Instructor is to make yoga accessible to everyone. So I opted for a fresher look that still uses a powerful geometric form: the vesica piscis.</p>
+    <p>The above was one of my shortlist logo designs for LucyRoseYoga. I created it following a trip to India, and was keen to incorporate all of the colours of the energy body. However, people I spoke to in the UK felt that the geometrical form and colour scheme combined appeared mystic or esoteric. This concerned me, because my aim as a Yoga Instructor is to make yoga accessible to everyone. So I opted for a fresher look that still uses a powerful geometric form in the vesica piscis. The colours are calmer and evocative of nature, so the message is more down to earth and inviting I hope!</p>
     <img src="./imgs/LucyRoseYoga.png" alt="" class="project-img">
+    <p><em>I used: pencil and paper, Photoshop, HTML5, CSS, JavaScript, Formspree.</em></p>
   </article>
   <footer>
     <ul>
