--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container-fade">
       <img src="./imgs/makatalk-cover.png" alt="" class="portfolio-piece">
       <div class="overlay">
-        <div class="text">MakaTalk (iPad app)</div>
+        <div class="text">MakaTalk</br>(iPad app)</div>
       </div>
     </div>
   </a>
@@ -34,7 +34,7 @@
     <div class="container-fade">
       <img src="./imgs/coot-cover.png" alt="" class="portfolio-piece">
       <div class="overlay">
-        <div class="text">Coot Freight (responsive re-design)</div>
+        <div class="text">Coot Freight</br>(site re-design)</div>
       </div>
     </div>
   </a>
@@ -43,7 +43,7 @@
       <div class="container-fade">
         <img src="./imgs/arabin-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Arab Innovators (responsive website)</div>
+          <div class="text">Arab Innovators</br>(responsive site)</div>
         </div>
       </div>
     </a>
@@ -52,7 +52,16 @@
       <div class="container-fade">
         <img src="./imgs/nourish-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Nourish (mobile app)</div>
+          <div class="text">Nourish </br>(mobile app)</div>
+        </div>
+      </div>
+    </a>
+
+    <a href="./bagrut.html">
+      <div class="container-fade">
+        <img src="./imgs/bagrut-cover.png" alt="" class="portfolio-piece">
+        <div class="overlay">
+          <div class="text">Language App </br>(UX research)</div>
         </div>
       </div>
     </a>
@@ -61,7 +70,7 @@
     <div class="container-fade">
       <img src="./imgs/yoga-cover.png" alt="" class="portfolio-piece">
       <div class="overlay">
-        <div class="text">LucyRoseYoga (responsive website)</div>
+        <div class="text">LucyRoseYoga</br>(responsive site)</div>
       </div>
     </div>
   </a>
