add intro text to main page

--- a/about.html
+++ b/about.html
@@ -14,15 +14,17 @@
   <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option">Information</li>
+      <li class="nav-option">About</li>
       <li class="nav-option"><a href="./index.html">Portfolio</a></li>
     </ul>
   </nav>
+  <div class="under-nav"></div>
   <article class="about-wrapper">
     <section class="about-main-text">
       <img src="./imgs/profile-drawing.png" alt="" class="about-drawing">
-      <p class="heading">Hi there! I'm Lucy. A designer and maker driven to create meaningful products, using tech to inspire joy. I offer consultancy, design, and full stack development. I also know about copywriting and brand. </p>
+      <p class="heading">I'm a designer and deep thinker driven to create meaningful products, using tech to inspire joy. I offer consultancy, design, and development. I also know about copywriting and brand. </p>
       <p class="heading">When I'm not working on freelance design projects or teaching yoga, you can find me guest lecturing at UCA in Front End Development and Interaction Design.</p>
+
       <h2>My approach to designing and making is:</h2>
       <ul class="my-approach-list">
         <li>User-centred.</li>
@@ -58,10 +60,13 @@
       </ul>
     </section>
   </article>
+  <div class="under-footer"></div>
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <a href="mailto:lucy.rose.sabin@gmail.com">
+        <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
+      </a>
     </ul>
   </footer>
 </body>
