--- a/arabin.html
+++ b/arabin.html
@@ -13,15 +13,16 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">Information</a></li>
+        <li class="nav-option"><a href="./about.html">About</a></li>
         <li class="nav-option"><a href="./index.html">Portfolio</a></li>
       </ul>
     </ul>
   </nav>
+  <div class="under-nav"></div>
   <article class="project-wrapper">
     <h1>Promoting Diversity Within The Israeli Tech Scene.</h1>
-    <p><a href="https://github.com/UKITH/Arabs-Startups">Arab Innovators</a> is a platform that I designed, given a brief by the British Embassy to create an online directory for startups run by Arabs in Israel.</p>
-    <p>Just 2% of startups in Israel are run by Arabs, despite the fact that they represent 20% of the population. From <a href="https://github.com/UKITH/Arabs-Startups/blob/UX/UX-research.md">my research</a>, I deduced that this is due to a range of factors; discrimination, cultural norms, and geography all play a part.</p>
+    <p><a href="https://github.com/UKITH/Arabs-Startups" target="_blank">Arab Innovators</a> is a platform that I designed, given a brief by the British Embassy to create an online directory for startups run by Arabs in Israel.</p>
+    <p>Just 2% of startups in Israel are run by Arabs, despite the fact that they represent 20% of the population. From <a href="https://github.com/UKITH/Arabs-Startups/blob/UX/UX-research.md" target="_blank">my research</a>, I deduced that this is due to a range of factors; discrimination, cultural norms, and geography all play a part.</p>
     <p>Arab Innovators aims to increase the visibility of Arab entrepreneurs in the eyes of investors, with an Events and News page that champion success stories.</p>
     <p>The aim is to create a sense of community, while showcasing talented role models. In further iterations I would like to supplement this with a newsfeed on the landing page and more of a social media presence.</p>
     <p>At the moment, the team and product owner are still adding to their initial database of startups and collecting feedback from investors.</p>
@@ -30,10 +31,11 @@
     <img src="./imgs/arabin-mobile.png" alt="" class="project-img">
     <p><em>I used: pencil and paper, Sketch App, InVision</em></p>
   </article>
+  <div class="under-footer"></div>
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
     </ul>
   </footer>
 </body>
