--- a/coot-freight.html
+++ b/coot-freight.html
@@ -13,11 +13,12 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">Information</a></li>
+        <li class="nav-option"><a href="./about.html">About</a></li>
         <li class="nav-option"><a href="./index.html">Portfolio</a></li>
       </ul>
     </ul>
   </nav>
+  <div class="under-nav"></div>
   <article class="project-wrapper">
     <h1>Coot Freight: Re-Designing A Company Website.</h1>
     <p>The client was an international freight forwarding company, in need of a website re-skin.</p>
@@ -27,10 +28,11 @@
     <img src="./imgs/coot-freight-old.png" alt="" class="project-img">
     <p><em>I used: pencil and paper for rapid prototyping, Sketch, Photoshop CS6.</em></p>
   </article>
+  <div class="under-footer"></div>
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
     </ul>
   </footer>
 </body>
