--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
   <nav>
     <ul>
       <li><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></li>
-      <li class="nav-option"><a href="./about.html">Information</a></li>
-      <li class="nav-option">Portfolio</li>
-      <li><img src="./imgs/down-arrow.png" alt="" class="mobile-view" id="down-arrow"></li>
+      <li class="nav-option"><a href="./about.html">About</a></li>
+      <li class="nav-option"><a href="#portfolio-section">Portfolio</a></li>
     </ul>
   </nav>
-  <article class="portfolio-wrapper">
+
+  <div class="under-nav"></div>
+
+  <section class="intro-text">
+    <p class="heading">Hello! I'm a Designer based in East London, specialising in Websites and Web Apps.</p>
+    <p>The most important part of my role is understanding you, your business, and your audience.</p>
+    <p>If you'd like to discuss a project, do <a href="mailto:lucy.rose.sabin@gmail.com">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee.</p>
+  </section>
+
+  <article class="portfolio-wrapper" id="portfolio-section">
 
   <a href="./makatalk.html">
     <div class="container-fade">
@@ -76,10 +84,13 @@
   </a>
 
   </article>
+
+  <div class="under-footer"></div>
+
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <a href ="mailto:lucy.rose.sabin@gmail.com"><li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li></a>
     </ul>
   </footer>
 </body>
