--- a/makatalk.html
+++ b/makatalk.html
@@ -15,11 +15,12 @@
     <ul>
       <ul>
         <li><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></li>
-        <li class="nav-option"><a href="./about.html">Information</a></li>
+        <li class="nav-option"><a href="./about.html">About</a></li>
         <li class="nav-option"><a href="./index.html">Portfolio</a></li>
       </ul>
     </ul>
   </nav>
+  <div class="under-nav"></div>
   <article class="project-wrapper">
     <img src="./imgs/makatalk.png" alt="" class="project-img">
     <h1>Overcoming Communication Barriers With Makaton Sign Language.</h1>
@@ -33,10 +34,11 @@
     <img src="./imgs/makatalk-options.png" alt="" class="project-img">
     <p><em>I used: pencil and paper, HTML5, CSS, JavaScript.</em></p>
   </article>
+  <div class="under-footer"></div>
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
     </ul>
   </footer>
 </body>
