--- a/nourish.html
+++ b/nourish.html
@@ -13,11 +13,12 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">Information</a></li>
+        <li class="nav-option"><a href="./about.html">About</a></li>
         <li class="nav-option"><a href="./index.html">Portfolio</a></li>
       </ul>
     </ul>
   </nav>
+  <div class="under-nav"></div>
   <article class="project-wrapper">
     <h1>A Discreet "Food Diary" For Patients Recovering From Eating Disorders.</h1>
     <p>Persons who receive therapy for food-related mental health disorders are generally required to track their mood and eating habits. The A4 paper forms that are currently used for this are indiscreet and impractical for people on the go. Imagine having to fill out the form below Every. Single. Time. you eat or drink something!</p>
@@ -34,10 +35,11 @@
     <img src="./imgs/roreich.jpg" alt="" class="project-img">
     <p><em>I used: pencil and paper, Photoshop, Illustrator, HTML5, CSS, JavaScript.</em></p>
   </article>
+  <div class="under-footer"></div>
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
     </ul>
   </footer>
 </body>
