--- a/yoga.html
+++ b/yoga.html
@@ -18,6 +18,7 @@
       </ul>
     </ul>
   </nav>
+  <div class="under-nav"></div>
   <article class="project-wrapper">
     <h1>A Stylish One-Page Website.</h1>
     <p>Simple business websites need to convey a sense of personality, as well as clarity about what the company or individual does.</p>
@@ -29,8 +30,8 @@
   </article>
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
     </ul>
   </footer>
 </body>
