--- a/bagrut.html
+++ b/bagrut.html
@@ -13,11 +13,12 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">Information</a></li>
+        <li class="nav-option"><a href="./about.html">About</a></li>
         <li class="nav-option"><a href="./index.html">Portfolio</a></li>
       </ul>
     </ul>
   </nav>
+  <div class="under-nav"></div>
   <article class="project-wrapper">
     <h1>UX Research For An Advanced Grammar Revision App.</h1>
     <img src="#" alt="" class="project-img">
@@ -25,10 +26,11 @@
     <img src="./imgs/demographics.jpg" alt="" class="project-img">
     <p><a href="https://github.com/lucyrose93/user-research-bagrut/blob/master/UX-initial-research.md" target="_blank">Here</a> is my comprehensive UX research document on GitHub, with user profiling, market research, pedagogical analysis, basic prototyping, colour theory in the learning environment, and typographical suggestions.</p>
   </article>
+  <div class="under-footer"></div>
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
     </ul>
   </footer>
 </body>
