--- a/publications.html
+++ b/publications.html
@@ -14,10 +14,11 @@
   <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option"><a href="./about.html">Information</a></li>
+      <li class="nav-option"><a href="./about.html">About</a></li>
       <li class="nav-option"><a href="./index.html">Portfolio</a></li>
     </ul>
   </nav>
+  <div class="under-nav"></div>
   <article class="about-wrapper">
     <section class="about-main-text">
       <h1>An Assortment Of Published Works</h1>
@@ -73,10 +74,11 @@
       </ul>
     </section>
   </article>
+  <div class="under-footer"></div>
   <footer>
     <ul>
-      <li>&copy 2017</li>
-      <li class="footer-email">E lucy.rose.sabin@gmail.com</li>
+      <li id="copyright">&copy 2017</li>
+      <li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li>
     </ul>
   </footer>
 </body>
