--- a/nourish.html
+++ b/nourish.html
@@ -21,7 +21,7 @@
   <div class="under-nav"></div>
   <article class="project-wrapper">
     <h1>A Discreet "Food Diary" For Patients Recovering From Eating Disorders.</h1>
-    <p>Persons who receive therapy for food-related mental health disorders are generally required to track their mood and eating habits. The A4 paper forms that are currently used for this are indiscreet and impractical for people on the go. Imagine having to fill out the form below Every. Single. Time. you eat or drink something!</p>
+    <p>People who receive therapy for food-related mental health disorders are generally required to track their mood and eating habits. The A4 paper forms that are currently used for this are indiscreet and impractical for people on the go. Imagine having to fill out the form below Every. Single. Time. you eat or drink something!</p>
     <img src="./imgs/eating-cbt-form.jpg" alt="" class="project-img">
     <p><a href="https://yvonne-liu.github.io/annafreud-app/landing.html" target="_blank">Nourish</a> is a prototype, built and designed by myself and two others during a five-day hackathon supported by the Anna Freud National Centre for Children and Families. It aims to replace paper "food diaries".</p>
     <img src="./imgs/nourish-logameal.png" alt="" class="project-img nourish-mobile">
