--- a/yoga.html
+++ b/yoga.html
@@ -28,6 +28,7 @@
     <img src="./imgs/LucyRoseYoga.png" alt="" class="project-img">
     <p><em>I used: pencil and paper, Photoshop, HTML5, CSS, JavaScript, Formspree.</em></p>
   </article>
+  <div class="under-footer"></div>
   <footer>
     <ul>
       <li id="copyright">&copy 2017</li>
