change portfolio covers to square proportions

--- a/index.html
+++ b/index.html
@@ -22,66 +22,78 @@
   <div class="under-nav"></div>
 
   <section class="intro-text">
-    <p class="heading">Hello! I'm a Designer based in East London, specialising in Websites and Web Apps.</p>
-    <p>The most important part of my role is understanding you, your business, and your audience.</p>
-    <p>If you'd like to discuss a project, do <a href="mailto:lucy.rose.sabin@gmail.com">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee.</p>
+    <p class="heading add-margin">Hello! I'm Lucy, a user-centred Designer based in London, specialising in Websites and Web Apps.</p>
+    <p class="add-margin">The most important part of my job is designing around you, your business, and your audience.</p>
+    <p>If you'd like to discuss a project, feel free to <a href="mailto:lucy.rose.sabin@gmail.com">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee :)</p>
   </section>
 
   <article class="portfolio-wrapper" id="portfolio-section">
 
+<div class="portfolio-cover">
   <a href="./makatalk.html">
     <div class="container-fade">
-      <img src="./imgs/makatalk-cover.png" alt="" class="portfolio-piece">
+      <img src="./imgs/makatalk-cover-mobile.png" alt="" class="portfolio-piece">
       <div class="overlay">
         <div class="text">MakaTalk</br>(iPad app)</div>
       </div>
     </div>
   </a>
+</div>
 
+<div class="portfolio-cover">
   <a href="./coot-freight.html">
     <div class="container-fade">
-      <img src="./imgs/coot-cover.png" alt="" class="portfolio-piece">
+      <img src="./imgs/coot-cover-mobile.png" alt="" class="portfolio-piece">
       <div class="overlay">
         <div class="text">Coot Freight</br>(site re-design)</div>
       </div>
     </div>
   </a>
+</div>
 
+  <div class="portfolio-cover">
     <a href="./arabin.html">
       <div class="container-fade">
-        <img src="./imgs/arabin-cover.png" alt="" class="portfolio-piece">
+        <img src="./imgs/arabin-cover-mobile.png" alt="" class="portfolio-piece">
         <div class="overlay">
           <div class="text">Arab Innovators</br>(responsive site)</div>
         </div>
       </div>
     </a>
+  </div>
 
+  <div class="portfolio-cover">
     <a href="./nourish.html">
       <div class="container-fade">
-        <img src="./imgs/nourish-cover.png" alt="" class="portfolio-piece">
+        <img src="./imgs/nourish-cover-mobile.png" alt="" class="portfolio-piece">
         <div class="overlay">
           <div class="text">Nourish </br>(mobile app)</div>
         </div>
       </div>
     </a>
+  </div>
 
+  <div class="portfolio-cover">
     <a href="./bagrut.html">
       <div class="container-fade">
-        <img src="./imgs/bagrut-cover.png" alt="" class="portfolio-piece">
+        <img src="./imgs/bagrut-cover-mobile.png" alt="" class="portfolio-piece">
         <div class="overlay">
           <div class="text">Language App </br>(UX research)</div>
         </div>
       </div>
     </a>
+  </div>
 
+<div class="portfolio-cover">
   <a href="./yoga.html">
     <div class="container-fade">
-      <img src="./imgs/yoga-cover.png" alt="" class="portfolio-piece">
+      <img src="./imgs/yoga-cover-mobile.png" alt="" class="portfolio-piece">
       <div class="overlay">
         <div class="text">LucyRoseYoga</br>(responsive site)</div>
       </div>
     </div>
   </a>
+</div>
 
   </article>
 
