--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </a>
 </div>
 
-<div class="portfolio-cover">
+<!-- <div class="portfolio-cover">
   <a href="./coot-freight.html">
     <div class="container-fade">
       <img src="./imgs/coot-cover-mobile.png" alt="" class="portfolio-piece">
@@ -49,7 +49,7 @@
       </div>
     </div>
   </a>
-</div>
+</div> -->
 
   <div class="portfolio-cover">
     <a href="./arabin.html">
